[package]
name = "video-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
bus = "2.4.1"
clap = { version = "4.0.32", features = ["derive"] }
directories-next = "2.0.0"
env-libvpx-sys = { version = "5.1.3", features=["generate"] }
futures-util = { version = "0.3.28", features = ["sink"] }
image = "0.24.7"
nokhwa = { version = "0.10.4", features = ["input-native"] }
protobuf = "3.2.0"
quinn = "0.10.2"
rustls = "0.21.7"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.4.1"
webpki-roots = "0.25.2"
types = { path= "../types"}
yuv = "0.1.5"
