[package]
name = "video-daemon"
version = "0.1.0"
edition = "2021"
description = "Stream audio and video to the videocall-rs backend"
license = "MIT"
authors = [
    "Griffin Obeid <griffin@securityunion.dev>",
    "Dario Lencina <dario@securityunion.dev>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Dario Lencina <dario@securityunion.dev>"
license-file = ["../LICENSE.md", "4"]
depends = "libvpx7 (>= 1.11.0), libvpx-dev (>= 1.11.0), libc6 (>= 2.34), libasound2-dev (>=1.2.8), libv4l-dev (>=1.22.1)"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
bus = "2.4.1"
clap = { version = "4.0.32", features = ["derive"] }
directories-next = "2.0.0"
env-libvpx-sys = { version = "5.1.3", features=["generate"] }
futures-util = { version = "0.3.28", features = ["sink"] }
image = "0.24.7"
nokhwa = { git="https://github.com/security-union/nokhwa", branch="add-yuyv", features = ["input-native"] }
protobuf = "3.2.0"
quinn = "0.10.2"
rustls = {version = "0.21.7", features = ["dangerous_configuration"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.4.1"
webpki-roots = "0.25.2"
types = { path= "../types"}
yuv = "0.1.5"
rayon = "1.8.0"
thiserror = "1.0.51"
cpal = "0.15.2"
opus = "0.3.0"
