[package]
name = "videocall-cli"
version = "1.0.35"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Griffin Obeid <griffin@securityunion.dev>",
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "zoom"]
categories = ["network-programming", "multimedia"]
description = "Effortlessly stream video from the CLI with our native client, designed for your desktop, robot, or Raspberry Pi."
include = ["src/**/*", "assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Dario Lencina <dario@securityunion.dev>"
license-file = ["../LICENSE-MIT", "4"]
depends = "libvpx7 (>= 1.11.0), libvpx-dev (>= 1.11.0), libc6 (>= 2.34), libasound2-dev (>=1.2.8), libv4l-dev (>=1.22.1), libssl-dev(>=3.3.1)"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
protobuf = "3.3.0"
quinn = "0.10.2"
rustls = {version = "0.21.7", features = ["dangerous_configuration"]}
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.4.1"
webpki-roots = "0.25.2"
thiserror = "1.0.51"
cpal = "0.15.2"
opus = "0.3.0"
image = "0.25.5"
env-libvpx-sys = { version = "5.1.3", features=["generate"] }
videocall-nokhwa = { path = "nokhwa", version = "0.10.9", features = ["input-native", "output-threaded"] }


[dependencies.videocall-types]
path = "../videocall-types"
version = "2.0.2"

