[package]
name = "videocall-cli"
version = "4.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Griffin Obeid <griffin@securityunion.dev>",
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "robotics", "iot", "embedded"]
categories = ["network-programming", "multimedia"]
description = "Effortlessly stream video from the CLI with our native client, designed for your desktop, robot, or Raspberry Pi."
include = ["src/**/*", "assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Dario Lencina <dario@securityunion.dev>"
license-file = ["../LICENSE-MIT", "4"]
depends = "libc6 (>= 2.34), libasound2-dev (>=1.2.8), libv4l-dev (>=1.22.1), libssl-dev(>=3.3.1)"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
protobuf = "3.3.0"
web-transport-quinn = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.4.1"
thiserror = "1.0.51"
cpal = "0.15.2"
ropus = "0.12"  # Pure-Rust Opus encoding (replaces C libopus/audiopus-sys)
image = "0.25.5"
# Pure-Rust VP9 encoding (replaces C libvpx/env-libvpx-sys). Default features pull
# in zero C dependencies; the legacy libvpx backend is opt-in via the `libvpx`
# feature below.
videocall-codecs = { path = "../videocall-codecs", version = "0.1.14" }
videocall-nokhwa = { path = "nokhwa", version = "0.10.9", features = ["input-native", "output-threaded"] }


[dependencies.videocall-types]
path = "../videocall-types"
version = "6.0.0"

[features]
# Default: pure-Rust VP9 encoder (no C dependencies).
default = []
# Legacy C libvpx encode backend, opt-in for comparison/rollback. Same public API.
libvpx = ["videocall-codecs/libvpx"]

