[package]
name = "videocall-client"
version = "1.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client for the videocall project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "zoom", "webrtc"]
categories = ["network-programming", "multimedia"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = { workspace = true }
cbc = { version = "0.1.2", features = ["alloc"] }
futures = "0.3"
gloo = "0.8.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3"
log = "0.4.19"
protobuf = "3.3.0"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
rsa = "0.9.2"
videocall-types = { path= "../videocall-types", version = "1.0.3" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-time = "1.1.0"
serde = { version = "1", features = ["derive"] }
yew = { version = "0.21" }
yew-websocket = "1.21.0"
yew-webtransport = "0.21.1"
prost = "0.11"
videocall-codecs = { path = "../videocall-codecs", features = ["wasm"], version = "0.1.2" }
neteq = { path = "../neteq", features = ["web"], version = "0.1.1" }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
videocall-diagnostics = { path = "../videocall-diagnostics" }
serde_json = { version = "1.0" }


[dependencies.web-sys]
version = "0.3"
features = [
    "AudioTrack",
    "AudioData",
    "AudioParam",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "GainOptions",
    "GainNode",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "MediaStreamAudioDestinationNode",
    "MessagePort",
    "OffscreenCanvas",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoEncoderEncodeOptions",
    "VideoFrame",
    "VideoFrameInit",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "LatencyMode",
    "HtmlAudioElement",
    "AudioDataInit",
    "AudioSampleFormat",
    "TransformStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "CanvasRenderingContext2d",
    "Performance",
    "AnalyserNode",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MediaSource",
    "DomException",
]

[dependencies.pidgeon]
version = "0.2.2"
features = ["wasm"]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

