[package]
name = "videocall-client"
version = "4.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform video conferencing client for videocall.rs, supporting WebTransport and WebSocket on both WASM and native targets."
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "wasm", "video-conferencing"]
categories = ["network-programming", "multimedia"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# === Platform-agnostic dependencies ===
aes = "0.8.3"
anyhow = { workspace = true }
async-broadcast = "0.7.2"
cbc = { version = "0.1.2", features = ["alloc"] }
futures = "0.3"
log = "0.4.19"
protobuf = "3.3.0"
prost = "0.11"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
rsa = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0" }
videocall-diagnostics = { path = "../videocall-diagnostics", version = "0.1.3" }
videocall-types = { path = "../videocall-types", version = "4.0.1" }
web-time = "1.1.0"

# === WASM-only dependencies (optional, enabled by "wasm" feature) ===
gloo = { version = "0.8.0", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
gloo-utils = { version = "0.1", features = ["serde"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

# === Native-only dependencies (optional, enabled by "native" feature) ===
tokio = { version = "1.28.1", features = ["full"], optional = true }
url = { version = "2.4.1", optional = true }
web-transport-quinn = { workspace = true, optional = true }

# === Conditional crate dependencies ===
videocall-transport = { path = "../videocall-transport", version = "0.1.0", optional = true }
videocall-codecs = { path = "../videocall-codecs", version = "0.1.12", optional = true }
neteq = { path = "../neteq", version = "0.8.2", optional = true, default-features = false }

[features]
default = []
wasm = [
    "gloo",
    "gloo-timers",
    "gloo-utils",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "pidgeon",
    "videocall-transport/wasm",
    "videocall-codecs/wasm",
]
native = [
    "tokio",
    "url",
    "web-transport-quinn",
    "videocall-transport/native",
]

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "AudioTrack",
    "AudioData",
    "AudioParam",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "GainOptions",
    "GainNode",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "MediaStreamAudioDestinationNode",
    "MessagePort",
    "OffscreenCanvas",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoEncoderEncodeOptions",
    "VideoFrame",
    "VideoFrameInit",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "LatencyMode",
    "HtmlAudioElement",
    "AudioDataInit",
    "AudioSampleFormat",
    "TransformStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "CanvasRenderingContext2d",
    "Performance",
    "AnalyserNode",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MediaSource",
    "DomException",
]

[dependencies.pidgeon]
version = "0.2.2"
features = ["wasm"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.20"
tokio = { version = "1.28.1", features = ["full", "test-util"] }
