[package]
name = "videocall-client"
version = "4.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform video conferencing client for videocall.rs, supporting WebTransport and WebSocket on both WASM and native targets."
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "wasm", "video-conferencing"]
categories = ["network-programming", "multimedia"]

[dependencies]
# === Platform-agnostic dependencies ===
aes = "0.8.3"
anyhow = { workspace = true }
async-broadcast = "0.7.2"
cbc = { version = "0.1.2", features = ["alloc"] }
futures = "0.3"
log = "0.4.19"
protobuf = "3.3.0"
prost = "0.11"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
rsa = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0" }
videocall-diagnostics = { path = "../videocall-diagnostics", version = "0.1.3" }
videocall-types = { path = "../videocall-types", version = "4.0.1" }
web-time = "1.1.0"

# === Native-only dependencies (optional, enabled by "native" feature) ===
tokio = { version = "1.28.1", features = ["full"], optional = true }
url = { version = "2.4.1", optional = true }
web-transport-quinn = { workspace = true, optional = true }

[features]
default = []
native = [
    "tokio",
    "url",
    "web-transport-quinn",
]

# === WASM dependencies — automatically pulled in on wasm32 targets ===
# This ensures `wasm-pack test --node` (no explicit features) works,
# matching the existing CI workflow.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.8.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
videocall-transport = { path = "../videocall-transport", version = "0.1.1", features = ["wasm"] }
videocall-codecs = { path = "../videocall-codecs", version = "0.1.13", features = ["wasm"] }
neteq = { path = "../neteq", version = "0.8.3", optional = true, default-features = false, features = ["web"] }
pidgeon = { version = "0.2.2", features = ["wasm"] }
web-sys = { version = "0.3", features = [
    "AudioTrack",
    "AudioData",
    "AudioParam",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "GainOptions",
    "GainNode",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "MediaStreamAudioDestinationNode",
    "MessagePort",
    "OffscreenCanvas",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoEncoderEncodeOptions",
    "VideoFrame",
    "VideoFrameInit",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "LatencyMode",
    "HtmlAudioElement",
    "AudioDataInit",
    "AudioSampleFormat",
    "TransformStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "Performance",
    "AnalyserNode",
    "CssStyleDeclaration",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MediaSource",
    "DomException",
] }

# === Native-only transport ===
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
videocall-transport = { path = "../videocall-transport", version = "0.1.1", features = ["native"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.28.1", features = ["full", "test-util"] }
