[package]
name = "videocall-codecs"
version = "0.1.14"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["video", "codec", "webrtc", "vpx", "wasm"]
categories = ["multimedia::video", "wasm", "web-programming"]
description = "Cross-platform video codec library with VP8/VP9 support for native and WebAssembly environments"
include = [
    "src/**/*",
    "assets/**/*",
    "tests/**/*",
    "benches/**/*",
    "uniffi-bindgen.rs",
    "build_ios.sh",
]

[lib]
name = "videocall_codecs"
path = "src/lib.rs"
# `staticlib` powers the UniFFI/iOS `.xcframework` (see build_ios.sh); the
# existing `cdylib`/`rlib` remain for wasm and native Rust consumers.
crate-type = ["staticlib", "cdylib", "rlib"]

# UniFFI binding generator, mirroring videocall-sdk. Native-only: the `uniffi`
# feature pulls in the CLI machinery, which does not build for wasm32.
[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[[bin]]
name = "worker_decoder"
path = "src/bin/worker_decoder.rs"
required-features = ["wasm"]

[[bin]]
name = "poc_decoder"
path = "src/bin/poc_decoder.rs"
required-features = ["native"]

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = ["native"]

[features]
default = []
libvpx = ["dep:env-libvpx-sys"]
native = ["libvpx"]
test-utils = []
# Swift/Kotlin FFI bindings for the pure-Rust VP9 encoder + decoder. Native-only,
# zero libvpx/C. Gates `src/ffi.rs` and the `uniffi-bindgen` bin.
uniffi = ["dep:uniffi", "dep:thiserror"]
wasm = [
    "wasm-bindgen",
    "web-sys",
    "console_error_panic_hook",
    "serde-wasm-bindgen",
    "js-sys",
    "wasm-bindgen-futures",
    "videocall-diagnostics"
]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
env-libvpx-sys = { workspace = true, optional = true }
anyhow = { workspace = true }
image = { version = "0.24", features = ["png", "jpeg"] }
js-sys = { version = "0.3.69", optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
log = "0.4.27"
serde_json = "1.0"
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "CodecState",
    "VideoFrame",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Worker",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlLinkElement",
] }
videocall-diagnostics = { path = "../videocall-diagnostics", optional = true, version = "0.1.4" }

# UniFFI Swift/Kotlin bindings (native-only, behind the `uniffi` feature).
uniffi = { version = "0.29", features = ["cli"], optional = true }
thiserror = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# rayon powers the native tile-column-parallel VP9 encode. It does not support
# wasm32 (no threads), where the encoder falls back to the identical sequential
# tile loop, producing byte-for-byte the same bitstream.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12.0"

[dev-dependencies]
approx = "0.5.1"
wasm-bindgen-test = "0.3.42"
criterion = { workspace = true }

[[example]]
name = "dump_vp9_ivf"
required-features = ["test-utils"]

[[test]]
name = "oracle_vp9"
required-features = ["libvpx", "test-utils"]

[[test]]
name = "perf_gate"
required-features = ["test-utils"]

[[bench]]
name = "vp9_encode"
harness = false
required-features = ["libvpx", "test-utils"]

[[bench]]
name = "vp9_decode"
harness = false
required-features = ["libvpx", "test-utils"]

