[package]
name = "videocall-diagnostics"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lightweight diagnostics event bus for the videocall-rs project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["diagnostics", "metrics", "events", "observability", "videocall"]
categories = ["development-tools::debugging", "network-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["diagnostics"]
diagnostics = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
flume = "0.11"
async-broadcast = "0.7.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4" 
