[package]
name = "videocall-flatbuffers"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = [
    "Dario Lencina <dario@securityunion.dev>"
]
keywords = ["quic", "webtransport", "zoom", "webrtc", "flatbuffers"]
categories = ["network-programming", "multimedia"]
description = "FlatBuffer message types for the videocall streaming platform"

[dependencies]
flatbuffers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
flatc-rust = "0.2"
