[package]
name = "videocall-ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "iOS/macOS library for videocall"

[lib]
name = "videocall_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# UniFFI for Swift/Rust bridging
uniffi = { version = "0.29", features = ["cli"] }
uniffi_macros = "0.29"

# Logging
log = "0.4.20"

# Networking dependencies
webtransport-quinn = "0.3.0"
h3 = "0.0.3"
h3-quinn = "0.0.3"
thiserror = "1.0.50"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
bytes = "1.4.0"

# Async runtime
futures = "0.3.31"

# Types
videocall-types = { path = "../videocall-types", version = "1.0.1" }

[build-dependencies]
uniffi_build = { version = "0.29", features = ["builtin-bindgen"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs" 
