[package]
name = "videocall-ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "iOS/macOS library for videocall"

[lib]
name = "videocall_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# UniFFI for Swift/Rust bridging
uniffi = { version = "0.29", features = ["cli"] }
uniffi_macros = "0.29"

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# Networking dependencies
web-transport-quinn = "0.5.0"
rustls-native-certs = "0.7"
thiserror = "1.0.50"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
bytes = "1.4.0"
rustls = { version = "0.23.10", default-features = false, features = ["ring", "std"] }
quinn = { version = "0.11", features = ["ring"] }
quinn-proto = { version = "0.11", features = ["ring"] }
aws-lc-sys = { version = "0.27.1", features = ["bindgen"] }
ring = { version = "0.17", default-features = false }


# Async runtime
futures = "0.3.31"

# Types
videocall-types = { path = "../videocall-types", version = "1.0.1" }

[build-dependencies]
uniffi_build = { version = "0.29", features = ["builtin-bindgen"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs" 
