[package]
name = "videocall-meeting-client"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Dario Lencina <dario@securityunion.dev>"]
keywords = ["videocall", "meeting", "api", "client"]
categories = ["network-programming"]
description = "Cross-platform REST client for the videocall.rs meeting API"

[dependencies]
videocall-meeting-types = { path = "../videocall-meeting-types", version = "0.1.1" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
